# Live

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nan/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: live.c  queue.c
app/src/main/java/com/nan/live/: App.java  LivePullActivity.java  LivePushActivity.java  MainActivity.java
app/src/main/java/com/nan/live/listener/: LiveStateChangeListener.java
app/src/main/java/com/nan/live/manager/: LivePusherManager.java
app/src/main/java/com/nan/live/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/nan/live/player/: VideoPlayerIJK.java  VideoPlayerListener.java
app/src/main/java/com/nan/live/pusher/: AudioPusher.java  BasePusher.java  PushNative.java  VideoPusher.java
app/src/main/java/com/nan/live/utils/: PreferenceUtils.java
app/src/main/res/layout/: activity_live_pull.xml  activity_live_push.xml  activity_main.xml
app/src/main/res/values/: styles.xml
app/src/main/res/values-v19/: styles.xml
app/src/test/java/com/nan/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
vitamio/: build.gradle
vitamio/src/androidTest/java/io/vov/vitamio/: ExampleInstrumentedTest.java
vitamio/src/main/: AndroidManifest.xml
vitamio/src/main/java/io/vov/vitamio/: MediaPlayer.java
vitamio/src/test/java/io/vov/vitamio/: ExampleUnitTest.java
